# train-eigenfaces

./: .gitignore  README.md  pyproject.toml
train_eigenfaces/: train.py
