[tool.poetry]
name = "train-eigenfaces"
version = "0.1.0"
description = "A tool to train a model that recognizes faces using eigenfaces and SVMs"
authors = ["TuanaCelik <tuanacelik95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "train_eigenfaces.train:train"